--- a/a.html
+++ b/a.html
@@ -1,3 +1,18 @@
+<style>
+
+
+a[href^="https"]::before {
+  content: "🔗 ";
+}
+
+a[href^="mailto"]::before {
+  content: "📧 ";
+}
+
+a[href^="tel"]::before {
+  content: "📞 ";
+}
+</style>
 <p>You can reach Michael at:</p>
 
 <ul>
