--- a/abbr.html
+++ b/abbr.html
@@ -1,1 +1,1 @@
-<p>You can use <abbr title="Cascading Style Sheets">CSS</abbr> to style your <abbr title="hola mundo">HTML</abbr>.</p>
+<p>hola <abbr title="Cascading Style Sheets">CSS</abbr> mundo <abbr title="hola mundo">:)</abbr>.</p>
