hola a todo el mundo

--- a/abbr.html
+++ b/abbr.html
@@ -1,1 +1,13 @@
-<p>hola <abbr title="Cascading Style Sheets">CSS</abbr> mundo <abbr title="hola mundo">:)</abbr>.</p>
+<style>
+
+p {
+    font-size: 1.3rem;
+}
+
+abbr {
+    font-style: italic;
+    font-weight: 100;
+}
+
+</style>
+<p>hola <abbr title="Cascading Style Sheets">a todo el</abbr> mundo <abbr title="HyperText Markup Language">:)</abbr>.</p>
