--- a/abbr.html
+++ b/abbr.html
@@ -1,7 +1,7 @@
 <style>
 
 p {
-    font-size: 1.3rem;
+    font-size: 2.3rem;
 }
 
 abbr {
@@ -11,3 +11,4 @@ abbr {
 
 </style>
 <p>hola <abbr title="Cascading Style Sheets">a todo el</abbr> mundo <abbr title="HyperText Markup Language">:)</abbr>.</p>
+<p>You can use <abbr title="Cascading Style Sheets">CSS<abbr title="Cascading Style Sheets"> to style your <abbr title="HyperText Markup Language">HTML</abbr>.</p>
