datos de contacto

--- a/address.html
+++ b/address.html
@@ -1,7 +1,17 @@
+<style>
+    a[href^="mailto"]::before {
+    content: "📧 ";
+}
 
-<p>Contact the author of this page:</p>
+a[href^="tel"]::before {
+    content: "📞 ";
+}
+
+</style>
+<p><abbr title="Cascading Style Sheets">datos de contacto</abbr>.</p>
 
 <address>
-  <a href="mailto:jim@rock.com">jimrock.com</a><br>
+  <a href="jovany@gmail.com">jovany@gmail.com</a><br>
   <a href="tel:+13115552368">(311) 555-2368</a>
+  <a href="https://www.youtube.com/">youtube</a>
 </address>
