--- a/address.html
+++ b/address.html
@@ -8,8 +8,8 @@ a[href^="tel"]::before {
 
 }
 a[href^="web"]::before {
-    content: "* ";
-
+    content: "📞 ";
+}
     p {
     font-size: 2.3rem;
 }
